# abca4

./: .gitignore  DATA_QUALITY_REPORT.md  README.md  extract_clinvar_variants.py  generate_protocol.py  pyproject.toml  ref%2FGRCh38%2Fspliceai%2Fspliceai_scores.raw.snps_and_indels.hg38.filtered.sorted.score_0.2.splice_gain.bed.gz.tbi  ref%2FGRCh38%2Fspliceai%2Fspliceai_scores.raw.snps_and_indels.hg38.filtered.sorted.score_0.2.splice_loss.bed.gz.tbi  release%2F4.1%2Fvcf%2Fexomes%2Fgnomad.exomes.v4.1.sites.chr1.vcf.bgz.tbi  release%2F4.1%2Fvcf%2Fgenomes%2Fgnomad.genomes.v4.1.sites.chr1.vcf.bgz.tbi  tasks.py  test_fixes.py  test_path.py
.cursor/commands/: vertical-slice.md
config/: abca4.yaml
impact_score/: ng_readme.md  rescore_variants.py
notebooks/: 01_data_exploration.html  01_data_exploration.py  01_data_exploration_export.html  02_feature_engineering.html  02_feature_engineering.py  02_feature_engineering_export.html  03_optimization_dashboard.html  03_optimization_dashboard.py  03_optimization_dashboard_export.html  04_cluster_ranking.py  04_fasta_exploration.html  04_fasta_exploration.py  05_cro_plan.html  05_cro_plan.py  05_cro_plan_export.html  README.md
src/: config.py
src/abca4_campaign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/annotation/: annotate_transcripts.py
src/cro/: __init__.py  assay_mapper.py  constants.py  cro_types.py  cro_validate.py  deliverables.py  designs.py  mechanism.py  parser.py  workpackages.py
src/data/: constants.py  download_clinvar.py  download_gnomad.py  (+2 more)
templates/: abca4_report.html.j2
(+51 files in other folders)
